--- a/style.css
+++ b/style.css
@@ -40,9 +40,9 @@ opacity: 0.7;
 /* texte animé echec */
 .anim-text {
     position: absolute;
-    top: 50%
-    left: -100%
-    animation: moveRight 2s infinite;
+    top: 50%;
+    left: -100%;
+    animation: moveRight 10s infinite;
 }
 
 @keyframes moveRight {
@@ -71,8 +71,8 @@ opacity: 0.7;
     color: white;
 }
 
-.card-white {
-    background: white;
+.card-green {
+    background: pink;
     bow-shadow: 0 0 16px rgba(0,0,0.1)
     border-radius: 4px;
     padding: 24px;
@@ -80,14 +80,15 @@ opacity: 0.7;
     flex-grow: 1;
 }
 
-.card-white img {
+.card-green img {
     width: 100%;
     height: 180px;
+    width: 200px;
     object-fit: cover;
-    border-radius: 4px;
+    border-radius: 30px;
 }
 
-.card-white h3 {
+.card-green h3 {
     margin-bottom: 0;
 }
 
@@ -99,7 +100,7 @@ opacity: 0.7;
 
 .cards {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 16px;
 }
 
@@ -108,7 +109,7 @@ opacity: 0.7;
       width: 400px;
     }
     .cards {
-      grid-template-rows: 1fr;
+      grid-template-columns: 1fr;
     }
   }
   
@@ -117,7 +118,7 @@ opacity: 0.7;
       width: 600px;
     }
     .cards {
-      grid-template-rows: 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
     }
   }
   
@@ -126,7 +127,7 @@ opacity: 0.7;
       width: 900px;
     }
     .cards {
-      grid-template-rows: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
     }
   }
 
