--- a/style.css
+++ b/style.css
@@ -1,34 +1,36 @@
 /* Write some CSS below */
 body {
-    font-family: Overpass;
-    color: #0C852A;
-    font-size: 18px;
-    margin: 0;
+  font-family: Overpass;
+  color: #0C852A;
+  font-size: 18px;
+  margin: 0;
 }
 
 h1, h2, h3 {
-    color: #0C852A;
-    font-family: Chivo;
+  color: #0C852A;
+  font-family: Chivo;
 }
 
 .container {
-    width: 900px;
-    margin: 60px auto;
+  max-width: 900px;
+  margin: 60px auto;
 }
 
 .banner {
-    background-image: url('images/fond matcha.jpg');
-    background-size: cover;
-    background-position: center;
-    padding: 150px 0;
-    text-align: center;
-    position: relative;
+  background-image: url('images/fond matcha.jpg');
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+  text-align: center;
+  position: relative;
 }
 
 .banner h1 {
-    color: rgb(222, 39, 219);
-    font-size: 45px;
-    margin: 0;
+  color: rgb(30, 63, 193);
+font-family: 'Helvetica Neue';
+font-weight: bold; 
+  font-size: 45px;
+  margin: 0;
 }
 
 .banner p {
@@ -37,119 +39,110 @@ font-size: 24px;
 opacity: 0.7;
 }
 
-/* texte animé echec */
+/* texte animÃŠ echec */
 .anim-text {
-    position: absolute;
-    top: 50%;
-    left: -100%;
-    animation: moveRight 10s infinite;
-}
-
-@keyframes moveRight {
-    0% {
-        left: -100%
-    }
-    100% {
-        left: 100%
-    }
+  margin-bottom: 20px;
 }
 
 .btn-green {
-    background-color: #0D7007;
-    color: white;
-    padding: 16px 48px;
-    border-radius: 4px;
-    display: inline-block;
-    text-decoration: none;
-    transition: .3s;
-    font-size: 20px;
-    font-weight: bold;
+  background-color: #0D7007;
+  color: white;
+  padding: 16px 48px;
+  border-radius: 4px;
+  display: inline-block;
+  text-decoration: none;
+  transition: .3s;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .btn-green:hover{
-    background-color: #C496EF;
-    color: white;
+  background-color: #C496EF;
+  color: white;
 }
 
 .card-green {
-    background: pink;
-    bow-shadow: 0 0 16px rgba(0,0,0.1)
-    border-radius: 4px;
-    padding: 24px;
-    margin: 8px;
-    flex-grow: 1;
+  background: pink;
+  box-shadow: 0 0 16px rgb(5, 78, 91);
+  border-radius: 4px;
+  padding: 24px;
+  margin: 8px;
+  flex-grow: 1;
 }
 
 .card-green img {
-    width: 100%;
-    height: 180px;
-    width: 200px;
-    object-fit: cover;
-    border-radius: 30px;
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 30px;
 }
 
 .card-green h3 {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .footer {
-    background: #297C38;
-    color: white;
-    padding: 10px 0px;   
+  background: #297C38;
+  color: white;
+  padding: 10px 0px;   
+}
+
+.footer h2 {
+color: rgb(2, 53, 135);
+font-family: cursive;
+font-weight: bold; 
+  font-size: 25px;
+text-align: center;
 }
 
 .cards {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 16px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
 }
 
 @media (max-width: 768px){
-  .card-green{
-    flex-direction: coloum;
-    gap:2rem;
-  }
-  .card {
-    width: 100%;
-  }
+.card-green{
+  flex-direction: column;
+  gap: 2rem;
+}
+.card {
+  width: 100%;
+}
 
 }
-   
+ 
 @media screen and (min-width: 769px) and (max-width: 968px) {
-  
+
 } 
 
 @media screen and (max-width:1364px) {
-  
+
 }
 
-
-
 @media (min-width: 300px) {
-    .container {
-      width: 400px;
-    }
-    .cards {
-      grid-template-columns: 1fr;
-    }
+  .container {
+    width: 400px;
   }
-  
-  @media (min-width: 700px) {
-    .container {
-      width: 600px;
-    }
-    .cards {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
+  .cards {
+    grid-template-columns: 1fr;
   }
-  
-  @media (min-width: 1000px) {
-    .container {
-      width: 900px;
-    }
-    .cards {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-  }
+}
 
- 
+@media (min-width: 700px) {
+  .container {
+    width: 600px;
+  }
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 1000px) {
+  .container {
+    width: 900px;
+  }
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
